--- a/index.html
+++ b/index.html
@@ -396,31 +396,25 @@
 </section>
 
 
-
-<div id="myCarousel" class="carousel slide container" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="row">
-                <div class="col-lg-4">
-                    <img src="/img/Group 978.png" alt="Image 3" class="img-fluid">
-                </div>
-                <div class="col-lg-4">
-                    <img src="/img/Group 976.png" alt="Image 1" class="img-fluid">
-                </div>
-                <div class="col-lg-4">
-                    <img src="/img/Group 977.png" alt="Image 2" class="img-fluid">
-                </div>
+<section class="getting-started-section container">
+    <div class="carousel">
+        <div class="item">
+            <div class="content-image">
+                <img src="/img/Group 977.png" alt="Image 2" class="img-fluid">
+            </div>
+        </div>
+        <div class="item">
+            <div class="content-image">
+                <img src="/img/Group 976.png" alt="Image 1" class="img-fluid">
+            </div>
+        </div>
+        <div class="item">
+            <div class="content-image">
+                <img src="/img/Group 978.png" alt="Image 3" class="img-fluid">
             </div>
         </div>
     </div>
-</div>
-
-
+</section>
 
 
 <script src="/js/index.js"></script>
